k8s/celery.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: underground
    name: underground-celery
    service: celery
    tier: backend
  name: underground-celery
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: underground
        name: underground-celery
        service: celery
        tier: backend
    spec:
      containers:
      - command:
        - celery
        - worker
        - -A
        - celery_worker.celery
        - -l
        - info
        image: gcr.io/alex-kerney/underground:0.7.16
        name: celery
        resources:
          limits:
            cpu: 800m
          requests:
            cpu: 10m
        volumeMounts:
        - mountPath: /google
          name: google-config
          readOnly: true
      volumes:
      - name: google-config
        secret:
          secretName: underground-service-account
