k8s/redis.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: underground-redis-master
  labels:
    app: underground
    service: redis
    role: master
    tier: backend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: underground
        service: redis
        role: master
        tier: backend
    spec:
      containers:
      - name: master
        image: redis:3.2-alpine
        resources:
          requests:
            cpu: 10m
          limits:
            cpu: 400m
        ports:
        - containerPort: 6379
