k8s/underground-celery-beat.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: underground
    name: underground-celery-beat
    service: celery-beat
    tier: backend
  name: underground-celery-beat
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: underground
        name: underground-celery-beat
        service: celery-beat
        tier: backend
    spec:
      containers:
      - command:
        - celery
        - beat
        - -A
        - celery_worker.celery
        - -l
        - info
        image: gcr.io/alex-kerney/underground:0.7.14
        name: celery-beat
        resources:
          limits:
            cpu: 800m
          requests:
            cpu: 10m
        volumeMounts:
        - mountPath: /google
          name: google-config
          readOnly: true
      volumes:
      - name: google-config
        secret:
          secretName: underground-service-account
