k8s/web.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: underground
    name: underground-web
    service: web
    tier: frontend
  name: underground-web
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: underground
        name: underground-web
        service: web
        tier: frontend
    spec:
      containers:
      - image: gcr.io/alex-kerney/underground:0.5
        name: web
        resources:
          requests:
            cpu: 10m
          limits:
            cpu: 400m
        command:
        - gunicorn
        - --log-level
        - debug
        - -w
        - '2'
        - -b
        - :8000
        - wsgi:app
        ports:
        - containerPort: 8000
          name: gunicorn
