k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: underground-postgres
  labels:
    app: underground
    service: postgres
    tier: backend
    name: underground-postgres
spec:
  ports:
  - port: 5432
    protocol: TCP
  selector:
    app: underground
    service: postgres
    tier: backend
    name: underground-postgres
