k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: underground-redis
  labels:
    app: underground
    service: redis
    role: master
    tier: backend
spec:
  ports:
  - port: 6379
    protocol: TCP
  selector:
    app: underground
    service: redis
    role: master
    tier: backend
