k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: underground-web
  labels:
    app: underground
    service: web
    tier: frontend
    name: underground-web
spec:
  ports:
  - port: 8000
    protocol: TCP
  selector:
    app: underground
    service: web
    tier: frontend
    name: underground-web
