k8s/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: underground-ingress
spec:
  backend:
    serviceName: underground-nginx
    servicePort: 80
